--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -63,10 +63,51 @@ input {
 	outline: 0;
 }
 
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip span {
+  background: #DC322F;
+  bottom: 100%;
+  display: block;
+  left: -20px;
+  opacity: 0;
+  padding: 2px 10px;
+  margin-bottom: 5px;
+  pointer-events: none;
+  position: absolute;
+  border-radius: 10px;
+  box-shadow: none;
+  border: 2px solid white;
+  -webkit-transform: translateY(25px);
+     -moz-transform: translateY(25px);
+      -ms-transform: translateY(25px);
+       -o-transform: translateY(25px);
+          transform: translateY(25px);
+  -webkit-transition: all .25s ease-out;
+     -moz-transition: all .25s ease-out;
+      -ms-transition: all .25s ease-out;
+       -o-transition: all .25s ease-out;
+          transition: all .25s ease-out;
+}
+
+.tooltip:hover span {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: translateY(0px);
+     -moz-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+
+
 .btn {
     display: inline-block;
     padding: 6px 12px;
-    margin-top: 20px;
     margin-bottom: 0;
     font-size: 1rem;
     line-height: 140%;
@@ -93,6 +134,8 @@ input {
             user-select: none;
 }
 
+.btn-delete { background-image: url(../images/icon_trash.png); }
+
 a {
   color: #2D8BCF;
 }
@@ -118,4 +161,16 @@ p.error {
 
 .ng-invalid .btn {
   background: gray;
+}
+
+form .btn {
+  margin: 10px;
+}
+
+.userlist ul {
+  margin: 0;
+  padding:0;
+}
+.userlist li {
+  list-style: none;
 }
