--- a/builds/development/views/checkins.html
+++ b/builds/development/views/checkins.html
@@ -1,12 +1,11 @@
 <section class="register">
   <form name="myform"
-    ng-submit="register()"
+    ng-submit="addCheckin()"
     novalidate>
 
-    <h1>Register</h1>
-    <p>To access site features</p>
-
-    <p class="error formerror" ng-show="message">{{ message }}</p>
+    <h1>Check-in</h1>
+    <p>Fill out this form to check-in to our meeting or go 
+      <a ng-href="#/meetings">back to meetings</a></p>
 
     <input type="firstname" name="firstname" placeholder="First Name"
       ng-model="user.firstname" ng-required="true">
@@ -20,21 +19,13 @@
       ng-show="myform.lastname.$invalid && myform.lastname.$touched">
       Last Name is required</p>
     
-
     <input type="email" name="email" placeholder="Email"
       ng-model="user.email" ng-required="true">
     <p class="error validationerror"
       ng-show="myform.email.$invalid && myform.email.$touched">
       Must be a valid email</p>
     
-    <input type="password" name="password" placeholder="Password"
-      ng-model="user.password" ng-required="true">
-    <p class="error validationerror"
-      ng-show="myform.password.$invalid && myform.password.$touched">
-      password is required</p>
-
     <button type="submit" class="btn"
-      ng-disabled="myform.$invalid">Register</button>
-    <p>or <a href="#/login">login</a></p>
+      ng-disabled="myform.$invalid">Check-in</button>
   </form>
 </section>
